--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
   </head>
   <body>
     <!--[if lt IE 10]>
